session_4/service.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: dl-service
  name: dl-service
spec:
  ports:
  - name: 80-5678
    port: 80
    protocol: TCP
    targetPort: 5678
  selector:
    app: dl-service
  type: ClusterIP
status:
  loadBalancer: {}
