session_4/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  name: dl-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - dl.com
      secretName: dl.com
  rules:
  - host: dl.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dl-service
            port:
              number: 80
